fixing some bug
