# internal/entity/storyCategory_entity.go
@@ -1,0 +1,6 @@
+package entity
+
+type StoryCategory struct {
+	StoryCategoryId string `db:"kategori_id"`
+	NamaKategori    string `db:"nama_kategori"`
+}
